working on bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,18 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.4...3.18)
 project(decomp_util)
 
 # set default build type
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wno-deprecated-declarations")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wno-deprecated-declarations")
 
 set(BUILD_SHARED_LIBS ON)
 
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIRS} include)
+
+find_package(Boost REQUIRED)
 
 include(CTest)
 
@@ -30,13 +32,16 @@ add_executable(test_iterative_decomp test/test_iterative_decomp.cpp)
 target_link_libraries(test_iterative_decomp ${Boost_LIBRARIES})
 add_test(test_iterative_decomp test_iterative_decomp ${CMAKE_SOURCE_DIR}/data/obstacles.txt)
 
-install(FILES "${PROJECT_NAME}Config.cmake" "${PROJECT_NAME}ConfigVersion.cmake"
-  DESTINATION "share/${PROJECT_NAME}/cmake")
+# install(FILES "${PROJECT_NAME}Config.cmake" "${PROJECT_NAME}ConfigVersion.cmake"
+#   DESTINATION "share/${PROJECT_NAME}/cmake")
 
-install(TARGETS
-  RUNTIME DESTINATION bin
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib)
+# install(TARGETS
+#   RUNTIME DESTINATION bin
+#   LIBRARY DESTINATION lib
+#   ARCHIVE DESTINATION lib)
 
-install(DIRECTORY include/decomp_basis include/decomp_geometry include/decomp_util
-  DESTINATION include)
+# install(DIRECTORY include/decomp_basis include/decomp_geometry include/decomp_util
+#   DESTINATION include)
+
+find_package(pybind11 REQUIRED)
+pybind11_add_module(decomp_util src/pybinding.cpp)
